--- a/public/scripts/style.css
+++ b/public/scripts/style.css
@@ -8,6 +8,7 @@
 }
 #sciOutPut{
 	font-size:18px;
+  height: 1em;
 	padding:3px;
 	margin:2px;
 	cursor:text;
@@ -28,7 +29,7 @@
 	border:1px solid #262626;
 	border-radius: 3px;
 	font-family:arial,helvetica,sans-serif;
-	font-size:16px;
+	font-size:24px;
 	font-weight:bold;
 	color:#185290;
 	background-color:#C8D8E8;
@@ -49,7 +50,7 @@
 	border:1px solid #262626;
 	border-radius: 3px;
 	font-family:arial,helvetica,sans-serif;
-	font-size:16px;
+	font-size:20px;
 	font-weight:bold;
 	color:#FFF;
 	background-color:#262626;
@@ -70,7 +71,7 @@
 	border:1px solid #262626;
 	border-radius: 3px;
 	font-family:arial,helvetica,sans-serif;
-	font-size:16px;
+	font-size:20px;
 	font-weight:bold;
 	color:#262626;
 	background-color:#ccc;
@@ -104,7 +105,7 @@
 	border:1px solid #262626;
 	border-radius: 3px;
 	font-family:arial,helvetica,sans-serif;
-	font-size:16px;
+	font-size:20px;
 	font-weight:bold;
 	color:#F00;
 	background-color:#DCADB0;
@@ -112,4 +113,7 @@
 .scieq:active {
 	background-color:#ff0000;
 	color:#ffffff;
+}
+.sciop {
+	font-size: 20;
 }
