--- a/public/scripts/style.css
+++ b/public/scripts/style.css
@@ -38,7 +38,7 @@
 	background-color:#013f7d;
 	color:#ffffff;
 }
-.scinm{
+.numIn{
 	display: inline-block;
 	display: table-cell;
 	vertical-align: middle;
@@ -55,11 +55,11 @@
 	color:#FFF;
 	background-color:#262626;
 }
-.scinm:active {
+.numIn:active {
 	background-color:#aaaaaa;
 	color:#000000;
 }
-.sciop{
+.mathOp{
 	display: inline-block;
 	display: table-cell;
 	vertical-align: middle;
@@ -76,7 +76,7 @@
 	color:#262626;
 	background-color:#ccc;
 }
-.sciop:active {
+.mathOp:active {
 	background-color:#000000;
 	color:#ffffff;
 }
@@ -93,7 +93,7 @@
 	font-size:13px;
 	color:#262626;
 }
-.scieq{
+.resolve{
 	display: inline-block;
 	display: table-cell;
 	vertical-align: middle;
@@ -110,10 +110,7 @@
 	color:#F00;
 	background-color:#DCADB0;
 }
-.scieq:active {
+.resolve:active {
 	background-color:#ff0000;
 	color:#ffffff;
-}
-.sciop {
-	font-size: 20;
 }
