clean up CSS, refactor HTML

--- a/public/scripts/style.css
+++ b/public/scripts/style.css
@@ -1,24 +1,24 @@
 
-body{
+html body{
 	font-family: Roboto;
 }
-.row{
-	margin:6px;
+body .calcRow{
+	padding:3px;
+	font-weight: bold;
 }
-.col-sm-3{
-	border:6px;
-}
-#sciout{
-	background: #eeeeee;
+.calcBody div div{
+	text-align:center;
+	border: 3px solid black;
+	border-radius: 10px;
+	font-size:2em;
+	margin: 6px 0px;
 }
 #outPut{
-	font-size:18px;
-	font-weight:bold;
+	font-size:2em;
 	padding: 3px;
-  height: 1.5em;
-	margin: 6px;
+	margin: 12px 3px 0 3px;
 	cursor:text;
-	border: 1px solid black;
+	border: 3px solid black;
 	text-align:right;
 	background-color:#8da36c;
 	border-radius: 10px;
@@ -30,48 +30,26 @@ body{
 	background-color: rgba(38, 210, 233, 0.49);
 }
 .numIn{
-	text-align:center;
-	vertical-align: middle;
-	height:45px;
-	border: 1px solid black;
-	border-radius: 10px;
-	font-size:1.5em;
-	font-weight:bold;
 	color:#FFF;
 	background-color:#262626;
+}
+.mathOp{
+	color:#262626;
+	background-color:#b1acac;
+}
+.resolve{
+	color:#F00;
+	background-color:#DCADB0;
 }
 .numIn:active {
 	background-color:#aaaaaa;
 	color:#000000;
 }
-.mathOp{
-	text-align:center;
-	vertical-align: middle;
-	padding: 4px;
-	height:45px;
-	border: 1px solid black;
-	border-radius: 10px;
-	font-size:1.3em;
-	font-weight:bold;
-	color:#262626;
-	background-color:#ccc;
+.resolve:active {
+	background-color:#ff0000;
+	color:#ffffff;
 }
 .mathOp:active {
 	background-color:#000000;
-	color:#ffffff;
-}
-.resolve{
-	text-align:center;
-	vertical-align: middle;
-	height:45px;
-	border: 1px solid black;
-	border-radius: 10px;
-	font-size:20px;
-	font-weight:bold;
-	color:#F00;
-	background-color:#DCADB0;
-}
-.resolve:active {
-	background-color:#ff0000;
 	color:#ffffff;
 }
