--- a/public/views/index.html
+++ b/public/views/index.html
@@ -19,37 +19,35 @@
     <h1>Backend Calculator</h1>
   </div>
   <div class="row">
-    <div class="col-sm-3 col-sm-offset-4 calcBody">
+    <div class="col-sm-4 col-sm-offset-4 calcBody">
       <div class="row" id="outPut"></div>
-			<div class="row">
-        <div class="col-sm-3 numIn">7</div>
-        <div class="col-sm-3 numIn">8</div>
-        <div class="col-sm-3 numIn">9</div>
-        <div id="addi" class="col-sm-3 mathOp">+</div>
+      <div class="col-sm-3 calcRow">
+        <div class="numIn">7</div>
+        <div class="numIn">4</div>
+        <div class="numIn">1</div>
+        <div class="numIn">0</div>
+        <div id="flip" class="mathOp">±</div>
       </div>
-			<div class="row">
-        <div class="col-sm-3 numIn">4</div>
-        <div class="col-sm-3 numIn">5</div>
-        <div class="col-sm-3 numIn">6</div>
-        <div id="subtr" class="col-sm-3 mathOp">–</div>
+      <div class="col-sm-3 calcRow">
+        <div class="numIn">8</div>
+        <div class="numIn">5</div>
+        <div class="numIn">2</div>
+        <div class="numIn">.</div>
+        <div id="sqrt" class="mathOp">√x</div>
       </div>
-			<div class="row">
-        <div class="col-sm-3 numIn">1</div>
-        <div class="col-sm-3 numIn">2</div>
-        <div class="col-sm-3 numIn">3</div>
-        <div id="multi" class="col-sm-3 mathOp">×</div>
+      <div class="col-sm-3 calcRow">
+        <div class="numIn">9</div>
+        <div class="numIn">6</div>
+        <div class="numIn">3</div>
+        <div id="exp" class="mathOp">exp</div>
+        <div id="clr" class="resolve">C</div>
       </div>
-			<div class="row">
-        <div class="col-sm-3 numIn">0</div>
-        <div class="col-sm-3 numIn">.</div>
-        <div id="exp" class="col-sm-3 mathOp">exp</div>
-        <div id="divi" class="col-sm-3 mathOp">÷</div>
-      </div>
-			<div class="row">
-        <div id="flip" class="col-sm-3 mathOp">±</div>
-        <div id="sqrt" class="col-sm-3 mathOp">√x</div>
-        <div id="clr" class="col-sm-3 resolve">C</div>
-        <div id="solve" class="col-sm-3 resolve">=</div>
+      <div class="col-sm-3 calcRow">
+        <div id="addi" class="mathOp">+</div>
+        <div id="subtr" class="mathOp">–</div>
+        <div id="multi" class="mathOp">×</div>
+        <div id="divi" class="mathOp">÷</div>
+        <div id="solve" class="resolve">=</div>
       </div>
     </div>
   </div>
